# whisper

./: README.md  package.oo.yaml  pyproject.toml
applets/: main.oo.yaml
blocks/extract_auto/: block.oo.yaml
blocks/merge_srt/: block.oo.yaml
blocks/python_lib_108020/: __init__.py  block.oo.yaml
blocks/python_lib_b642c3/: __init__.py  block.oo.yaml
blocks/python_lib_fa5c5b/: __init__.py  block.oo.yaml
blocks/whisper/: block.oo.yaml
codes/main/: __init__.py  extract_auto.py  merge_srt.py  whisper.py
flows/cpp_test/: .flow.ui.oo.json  flow.oo.yaml
flows/cpp_test/scriptlets/: +python#1.py
flows/extract-srt-file/: .flow.ui.oo.json  flow.oo.yaml
flows/playground/: .flow.ui.oo.json  flow.oo.yaml
flows/whisper/: .flow.ui.oo.json  flow.oo.yaml
shared/: model.py
subflows/whisper-srt-extractor/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/whisper-srt-extractor/scriptlets/: +scriptlet#1.py
tasks/whisper/: main.py  task.oo.yaml
tasks/whisper-model/: main.py  task.oo.yaml
tasks/whisper_segments_to_srt/: main.py  task.oo.yaml
