[project]
name = "whisper"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-whisper (==20240930)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
